--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "@vitejs/plugin-react": "^2.0.0",
+    "buffer": "^6.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "vite": "^3.0.4"
